-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14
-
Component/s: hotspot
-
b18
Running serviceability/jvmti/RedefineClasses/RedefineDeleteJmethod.java with -Xcheck:jni fails with the following error:
FATAL ERROR in native method: non-weak methodID passed to JNI call
at RedefineDeleteJmethod.jniCallDeleteMe(Native Method)
at RedefineDeleteJmethod.test(RedefineDeleteJmethod.java:72)
at RedefineDeleteJmethod.main(RedefineDeleteJmethod.java:90)
at jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(java.base@14-internal/Native Method)
at jdk.internal.reflect.NativeMethodAccessorImpl.invoke(java.base@14-internal/NativeMethodAccessorImpl.java:62)
at jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(java.base@14-internal/DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(java.base@14-internal/Method.java:565)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.lang.Thread.run(java.base@14-internal/Thread.java:830)
FATAL ERROR in native method: non-weak methodID passed to JNI call
at RedefineDeleteJmethod.jniCallDeleteMe(Native Method)
at RedefineDeleteJmethod.test(RedefineDeleteJmethod.java:72)
at RedefineDeleteJmethod.main(RedefineDeleteJmethod.java:90)
at jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(java.base@14-internal/Native Method)
at jdk.internal.reflect.NativeMethodAccessorImpl.invoke(java.base@14-internal/NativeMethodAccessorImpl.java:62)
at jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(java.base@14-internal/DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(java.base@14-internal/Method.java:565)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.lang.Thread.run(java.base@14-internal/Thread.java:830)
- relates to
-
JDK-8232120 com/sun/jdi/InvokeTest fails with -Xcheck:jni: assert(k->is_instance_klass()) failed: cast to InstanceKlass
-
- Resolved
-
-
JDK-8181171 Deleting method for RedefineClasses breaks ResolvedMethodName
-
- Resolved
-