8229900: RedefineDeleteJmethod.java fails with -Xcheck:jni

Remove RedefineClasses adjustment and test, but improve checking for method/class matching.

Reviewed-by: dholmes, sspitsyn